--- a/app/sass/_head.scss
+++ b/app/sass/_head.scss
@@ -2,6 +2,7 @@
 .head{
   background-color: #fff;
   padding: 0 20px;
+  position: relative;
 }
 .buttons-mobile{
   display: none;
@@ -45,6 +46,27 @@
         height: 30px;
         border-radius: 50%;
       }
+    }
+  }
+}
+.tel-win{
+  position: absolute;
+  background-color: #fff;
+  display: none;
+
+  border: 2px solid #4a76a8;
+  bottom: -40px;
+  border-radius: 10px;
+
+  z-index: 1000;
+  a{
+    padding: 20px;
+    color:#000 ;
+    font-family: Gilroy-Bold;
+    display: block;
+    &:hover{
+      color:#4a76a8 ;
+
     }
   }
 }
@@ -129,6 +151,7 @@ h2{
         display: flex;
         justify-content: space-between;
         .phone{
+
           width: 54px;
           height: 54px;
           border-radius: 50% ;
@@ -139,6 +162,7 @@ h2{
           transition: 0.3s;
           border: 2px solid #4a76a8;
           cursor: pointer;
+
 
           img[src="img/phone.png"]{
             width: 70%;
@@ -279,7 +303,7 @@ h2{
         font-family: Gilroy;
         font-size: 20px;
         font-weight: 400;
-        p:first-child{
+        p:nth-child(odd){
           font-weight: 800;
         }
       }
@@ -320,21 +344,9 @@ h2{
     }
 
 }
-@media (min-width: 768px) {
-  .slider-down .slider-nav .slick-current .top{
-    p{
-      opacity: 0;
-    }
-    .blue-box{
-      opacity: 0;
-    }
-    &:before{
-      display: none;
-    }
 
 
-  }
-}
+
 
 @keyframes opa {
   0%{
@@ -362,8 +374,10 @@ h2{
     .slider-box{
       position: relative;
       margin: 20px;
+      cursor: pointer;
 
       .text-box{
+
         .top{
           background-size: cover;
           position:relative;
@@ -378,9 +392,12 @@ h2{
             content: '';
             position: absolute;
             background-color: rgba(255,255,255, 0.8);
+           opacity: 0;
+
 
           }
           p{
+            opacity: 0;
             color: #000000;
             font-family: Gilroy;
             font-size: 24px;
@@ -400,6 +417,7 @@ h2{
             font-size: 24px;
             font-weight: 400;
             position: relative;
+            opacity: 0;
           }
         }
         .blue-down{
@@ -420,6 +438,22 @@ h2{
       }
     }
   }
+}
+.slider-down .slider-nav .slick-current .slider-box   .top {
+  p{
+    opacity: 1;
+  }
+  .blue-box{
+    opacity:1;
+  }
+  &:before{
+    opacity: 1;
+  }
+}
+.slider-down .slider-nav  .top{
+
+
+
 }
 .prev {
     background-image: url(../img/next.png);
@@ -469,35 +503,13 @@ h2{
   text-shadow: 0 0 15px rgba(74, 118, 168, 0.15);
 }
 
+.slider-down .slider-nav .slider-box .text-box .newr {
 
-@media (max-width: 1400px) {
-  .slider-down .slider-nav .slider-box .text-box .top {
-    background-color: rgba(255,255,255,.8);
-    width: 100%;
-    height: 100%;
-    padding: 25px;
-  }
-  .slider-down .slider-nav .slider-box .text-box .blue-down {
-    height: 80px;
-    width: 100%;
-    font-size:20px;
-
-  }
-  .slider-down .slider-nav .slider-box .text-box .top .blue-box {
-    padding: 25px;
-    border-radius: 20px;
-
-  }
-  .slider-down .slider-nav .slider-box .text-box .top p {
-    font-family: Gilroy;
-    font-size: 20px;
-  }
-  .slider-down{
-.slider-nav{
-  width: 1000px;
-  margin: auto;
+  padding: 90px 32px;
 }
-  }
+@media (max-width: 1400px) {
+
+
   .info-block {
     padding: 40px 40px;
     width: 750px;
@@ -512,6 +524,7 @@ width: inherit;
 //      margin-bottom: 30px;
 //    }
   }
+
 }
 @media (max-width: 1200px) {
   .slider-down .slider-nav .slider-box .text-box .top {
@@ -548,20 +561,79 @@ width: inherit;
     opacity: 1;
 
   }
-  .prev {
 
-    left: 60px;
-    z-index: 100;
+  .slider-down .slider-nav {
+    width: 1000px;
+    margin: auto;
+  }
+  .slider-down .slider-nav .slider-box .text-box .newr {
+
+    padding: 58px 25px;
+  }
+
+}
+@media (max-width: 1060px) {
+
+  .slider-down .slider-nav .slider-box .text-box .blue-down {
+    height: 120px;
+    width: 100%;
+    font-size:24px;
 
   }
-  .next {
-
-    right: 60px;
-    z-index: 100;
+  .slider-down .slider-nav .slider-box {
+    position: relative;
+    margin: 5px;
+  }
+  .slider-down .slider-nav .slider-box .text-box .top .blue-box {
+    padding: 25px;
+    border-radius: 20px;
 
   }
+  .slider-down .slider-nav .slider-box .text-box .top p {
+    font-family: Gilroy;
+    font-size: 22px;
+  }
+  .slider-down{
+    .slider-nav{
+      width: 100%;
+    }
+  }
+  .slider-down .slider-nav .slick-current .top{
+    opacity: 1;
+
+  }
+
+  .slider-down .slider-nav {
+    width: 600px;
+    margin: auto;
+  }
+  .slider-down .slider-nav .slider-box .text-box .newr {
+
+    padding: 37px 25px;
+  }
+
 }
 @media (max-width: 993px) {
+  .info-block {
+    padding: 40px 40px;
+    margin-left: auto;
+    position: relative;
+    background-color: rgba(255,255,255,.8);
+  }
+  //.info-block .buttom-box {
+  //  width: inherit;
+  //  //    flex-direction: column;
+  //  //    .button-red{
+  //  //      margin-bottom: 30px;
+  //  //    }
+  //}
+}
+@media (max-width:768px ) {
+  .info-block .left-img {
+    height: 4px;
+    background-color: #4a76a8;
+
+  }
   .info-block {
     padding: 40px 40px;
     width: 100%;
@@ -576,8 +648,6 @@ width: inherit;
     //      margin-bottom: 30px;
     //    }
   }
-}
-@media (max-width:768px ) {
   .slider-down .slider-nav .slider-box .text-box .top {
     background-color: rgba(255,255,255,.8);
     width: 100%;
@@ -645,6 +715,14 @@ width: inherit;
   }
 }
 @media (max-width:480px ) {
+  .info-block .titl-p {
+    font-size: 25px;
+  }
+  .info-block .normal-p {
+
+    font-size: 20px;
+
+  }
 
   .slider-down .slider-nav .slider-box .text-box .top {
     background-color: rgba(255,255,255,.8);
@@ -676,4 +754,442 @@ width: inherit;
     }
   }
 
+}
+
+.benefits{
+  position: relative;
+  padding: 70px 0;
+  h2{
+    font-size: 40px;
+    position: relative;
+  }
+  color: #fff;
+  background-position:center;
+  background-size:cover ;
+  &:before{
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(255,255,255, 0.4);
+  }
+  .items-blue{
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+  .blue-box{
+    margin-top: 65px;
+   max-width: 560px;
+    background-color: #fff;
+    position: relative;
+    padding: 23px 62px 23px 196px;
+    .blue{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 196px;
+      height: 202px;
+      border-radius: 20px 20px 0 0;
+      background-color: #4a76a8;
+      position: absolute;
+      bottom: 8px;
+      left: 0;
+
+    }
+    .f{
+      color: #000000;
+      font-family: Gilroy;
+      font-size: 24px;
+      font-weight: 500;
+      padding-bottom: 15px;
+      padding-left: 20px;
+    }
+    .l{
+      height: 5px;
+      background-color: #4a76a8;
+    }
+    .s{
+      padding-top: 15px;
+      padding-left: 20px;
+      color: #000000;
+      font-family: Gilroy;
+      font-size: 18px;
+      font-weight: 400;
+    }
+  }
+  }
+}
+@media (max-width: 1200px) {
+  .benefits .items-blue .blue-box {
+    margin-top: 65px;
+    max-width: 469px;
+    background-color: #fff;
+    position: relative;
+    padding: 23px 27px 23px 196px;
+  }
+}
+@media (max-width: 993px) {
+  .benefits{
+    padding: 40px 0;
+    h2{
+      padding: 0;
+    }
+  }
+  .benefits .items-blue  {
+justify-content: space-around;
+  }
+  .benefits .items-blue .blue-box {
+    margin-top: 65px;
+    max-width: 280px;
+    background-color: #fff;
+    position: relative;
+    padding:0;
+    text-align: center;
+  }
+  .benefits .items-blue .blue-box .blue{
+    text-align: center;
+    top: -20px;
+    position: relative;
+    width: 100%;
+  }
+  .benefits .items-blue .blue-box .s {
+    padding: 15px;
+  }
+  .benefits .items-blue .blue-box .f {
+    padding: 15px;
+    padding-top: 0;
+  }
+
+}
+@media (max-width: 480px){
+  .benefits h2 {
+    font-size: 30px;
+    position: relative;
+  }
+}
+////////////////////////////////////////
+.thank-you{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  display: none;
+  z-index: 100;
+  .dark{
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0,0,0, 0.8);
+    display: flex;justify-content: center ;
+    align-items: center;
+    animation: zoom1 0.8s;
+
+  }
+
+  .thank-you-window{
+    max-width: 619px;
+    background-color: #fff;
+    padding:65px 50px;
+    position: relative;
+    animation: zoom 0.5s;
+    margin: 0 20px;
+    border-radius: 25px;
+
+
+    .button-crest{
+      position: absolute;
+      top: 25px;
+      right: 25px;
+      width: 22px;
+      height: 22px;
+      cursor: pointer;
+      img{
+        width: 100%;
+      }
+    }
+    p{
+      background-color: #fff;
+      padding: 75px 61px;
+      color: #000000;
+      font-family: Gilroy;
+      font-size: 30px;
+      font-weight: 500;
+    }
+  }
+}
+.thank-you-form{
+  .thank-you-window{
+    border-radius: 25px;
+    padding:55px 65px;
+    text-align: center;
+
+    span{
+      color: #000;
+      font-family: Gilroy;
+      font-size: 30px;
+      font-weight: 700;
+    }
+    h4{
+      color: #2e2e2e;
+      font-family: Gilroy;
+      font-size: 20px;
+      font-weight: 400;
+      padding: 10px 0;
+    }
+    form{
+
+      background-color: #fff;
+      display: flex;
+      flex-direction: column;
+      input{
+        width: 435px;
+        height: 57px;
+        border-radius: 30px;
+        border: 1px solid #c6c6c6;
+        background-color: #f8f7f7;
+        padding: 0 33px;
+        outline: none;
+        display: block;
+        margin: auto;
+
+      }
+      button[type='submit']{
+        width: 228px;
+        height: 57px;
+        box-shadow: 0 0 15px rgba(74, 118, 168, 0.15);
+        border-radius: 27px;
+        background-color: #4a76a8;
+        color: #ffffff;
+        font-family: Gilroy;
+        font-size: 20px;
+        font-weight: 700;
+        display: block;
+        margin: auto;
+        transition: 0.3s;
+        border: 2px solid #4a76a8;
+        outline: none;
+        &:hover{
+          border: 2px solid #4a76a8;
+          background-color: #fff;
+          color: #4a76a8;
+        }
+
+      }
+      input[name='phone']{
+        margin: 12px auto;
+      }
+
+    }
+  }
+}
+@keyframes zoom {
+  0%{
+    transform: scale(0.4);
+  }
+  100%{
+    transform: scale(1);
+  }
+}
+@keyframes zoom1 {
+  0%{
+    background-color: rgba(0,0,0, 0);
+  }
+  100%{
+    background-color: rgba(0,0,0, 0.8);
+  }
+}
+@media (max-width: 768px) {
+  .thank-you .thank-you-window p {
+    text-align: center;
+    background-color: #fff;
+    padding:40px 0;
+
+  }
+  .thank-you .thank-you-window{
+    padding:40px;
+  }
+}
+@media (max-width:580px) {
+  .thank-you-form .thank-you-window form input {
+    width: 100%;
+
+  }
+  .thank-you-form .thank-you-window {
+    -webkit-border-radius: 25px;
+    border-radius: 25px;
+    padding: 55px 25px;
+    text-align: center;
+  }
+}
+.dsr{
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.popup-images{
+visibility: hidden;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0,0,0, 0.8);
+  .slider-big{
+    position: relative;
+    width: 80%;
+    .big{
+
+    }
+    .crest{
+      z-index: 150;
+      position: absolute;
+      right: 32px;
+      top: 32px;
+      width:38px;
+      height:38px;
+      cursor: pointer;
+      img{
+        width: 100%;
+      }
+    }
+    .sli{
+      padding: 10px;
+      img{
+        width: 100%;
+      }
+    }
+  }
+  .slider-small{
+    width: 80%;
+
+
+    .sli{
+      padding: 10px;
+      position: relative;
+      img{
+        width: 100%;
+      }
+    }
+    .slick-current .sli{
+      &:before{
+        position: absolute;
+        content: "";
+        top: 10px;
+        left: 10px;
+        right: 10px;
+        bottom: 10px;
+        background-color: rgba(0,0,0, 0.5);
+      }
+
+    }
+  }
+
+}
+.pop-n{
+  visibility: visible;
+  animation: opa  0.5s;
+}
+@keyframes opa {
+  0%{
+    opacity: 0;
+    transform: scale(0.5);
+  }
+  100%{
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+.next1{
+  background-image: url(../img/nx.png);
+  width: 24px;
+  height: 44px;
+  position: absolute;
+  background-color: transparent;
+  border: none;
+  right: -80px;
+  top: 50%;
+  transform: translateY(-50%);
+  outline: none;
+  img{
+    width: 100%;
+  }
+}
+.prev1{
+  background-image: url(../img/pr.png);
+  width: 22px;
+  height: 45px;
+  position: absolute;
+  background-color: transparent;
+  border: none;
+  left: -80px;
+  top: 50%;
+  transform: translateY(-50%);
+  outline: none;
+  img{
+    width: 100%;
+  }
+
+}
+@media (max-width: 1400px) {
+  .popup-images .slider-big {
+    position: relative;
+    width: 60%;
+  }
+  .popup-images .slider-small {
+    position: relative;
+    width: 60%;
+  }
+  .popup-images .slider-big .crest {
+    z-index: 150;
+    position: absolute;
+    right: 32px;
+    top: 32px;
+    width: 25px;
+    height: 25px;
+  }
+}
+@media (max-width: 768px) {
+  .popup-images .slider-big {
+    position: relative;
+    width: 90%;
+  }
+  .popup-images .slider-small {
+    position: relative;
+    width: 90%;
+  }
+  .popup-images .slider-big .crest {
+    z-index: 150;
+    position: absolute;
+    right: 25px;
+    top: 25px;
+    width: 25px;
+    height: 25px;
+  }
+}
+@media (max-width: 500px) {
+  .popup-images .slider-big {
+    position: relative;
+    width: 100%;
+  }
+  .popup-images .slider-small {
+    position: relative;
+    width: 100%;
+  }
+  .popup-images .slider-big .crest {
+    z-index: 150;
+    position: absolute;
+    right: 32px;
+    top: 32px;
+    width: 25px;
+    height: 25px;
+  }
 }
