--- a/app/sass/_head.scss
+++ b/app/sass/_head.scss
@@ -344,6 +344,9 @@ h2{
     }
 
 }
+.nn{
+  padding-bottom:60px;
+}
 
 
 
@@ -393,6 +396,7 @@ h2{
             position: absolute;
             background-color: rgba(255,255,255, 0.8);
            opacity: 0;
+            transition: 0.3s;
 
 
           }
@@ -404,6 +408,7 @@ h2{
             font-weight: 400;
             margin-bottom: 20px;
             position: relative;
+            transition: 0.3s;
           }
           .blue-box{
             border-radius: 30px;
@@ -418,6 +423,44 @@ h2{
             font-weight: 400;
             position: relative;
             opacity: 0;
+            transition: 0.3s;
+          }
+          &:hover{
+            &:before{
+              top: 0;
+              left: 0;
+              right: 0;
+              bottom: 0;
+              content: '';
+              position: absolute;
+              background-color: rgba(255,255,255, 0.8);
+              opacity: 1;
+
+
+            }
+            p{
+              opacity: 1;
+              color: #000000;
+              font-family: Gilroy;
+              font-size: 24px;
+              font-weight: 400;
+              margin-bottom: 20px;
+              position: relative;
+            }
+            .blue-box{
+              border-radius: 30px;
+              background-color: rgba(74, 118, 168, 0.6);
+              display: flex;
+              justify-content: space-between;
+              padding: 30px 44px;
+              margin-bottom: 10px;
+              color: #000000;
+              font-family: Gilroy;
+              font-size: 24px;
+              font-weight: 400;
+              position: relative;
+              opacity: 1;
+            }
           }
         }
         .blue-down{
