--- a/app/sass/_head.scss
+++ b/app/sass/_head.scss
@@ -425,43 +425,7 @@ h2{
             opacity: 0;
             transition: 0.3s;
           }
-          &:hover{
-            &:before{
-              top: 0;
-              left: 0;
-              right: 0;
-              bottom: 0;
-              content: '';
-              position: absolute;
-              background-color: rgba(255,255,255, 0.8);
-              opacity: 1;
 
-
-            }
-            p{
-              opacity: 1;
-              color: #000000;
-              font-family: Gilroy;
-              font-size: 24px;
-              font-weight: 400;
-              margin-bottom: 20px;
-              position: relative;
-            }
-            .blue-box{
-              border-radius: 30px;
-              background-color: rgba(74, 118, 168, 0.6);
-              display: flex;
-              justify-content: space-between;
-              padding: 30px 44px;
-              margin-bottom: 10px;
-              color: #000000;
-              font-family: Gilroy;
-              font-size: 24px;
-              font-weight: 400;
-              position: relative;
-              opacity: 1;
-            }
-          }
         }
         .blue-down{
 
@@ -477,6 +441,75 @@ h2{
           align-items: center;
           padding: 0 20px;
           text-align: center;
+        }
+      }
+    }
+  }
+}
+@media (min-width: 1200px) {
+  .slider-down{
+
+    .slider-nav{
+
+      .slider-box{
+
+
+        .text-box{
+
+          .top{
+
+            &:before{
+
+
+            }
+            p{
+
+            }
+            .blue-box{
+
+            }
+            &:hover{
+              &:before{
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                content: '';
+                position: absolute;
+                background-color: rgba(255,255,255, 0.8);
+                opacity: 1;
+
+
+              }
+              p{
+                opacity: 1;
+                color: #000000;
+                font-family: Gilroy;
+                font-size: 24px;
+                font-weight: 400;
+                margin-bottom: 20px;
+                position: relative;
+              }
+              .blue-box{
+                border-radius: 30px;
+                background-color: rgba(74, 118, 168, 0.6);
+                display: flex;
+                justify-content: space-between;
+                padding: 30px 44px;
+                margin-bottom: 10px;
+                color: #000000;
+                font-family: Gilroy;
+                font-size: 24px;
+                font-weight: 400;
+                position: relative;
+                opacity: 1;
+              }
+            }
+          }
+          .blue-down{
+
+
+          }
         }
       }
     }
@@ -802,6 +835,8 @@ width: inherit;
 .benefits{
   position: relative;
   padding: 70px 0;
+  background-size: cover;
+  background-position: center;
   h2{
     font-size: 40px;
     position: relative;
@@ -1263,4 +1298,71 @@ footer{
     }
   }
 
+}
+$base: 16;
+
+// Calculate pixels to rem units for font sizes
+
+// transitions
+@mixin transition($property, $duration) {
+  -webkit-transition: $property $duration ease-in-out;
+  -moz-transition: $property $duration ease-in-out;
+  transition: $property $duration ease-in-out;
+}
+
+
+h1.intro {
+  color: #fff;
+  font-family: Gilroy;
+  font-size: 40px;
+  font-weight: 700;
+  text-align: center;
+  text-transform: initial;
+
+
+
+}
+.change-text {
+  color: #fff;
+  font-family: Gilroy;
+  font-size: 40px;
+  font-weight: 700;
+  text-align: center;
+  text-transform: initial;
+  margin: auto;
+  position: relative;
+text-align: center;
+  width: 100%;
+
+
+  &:before {
+    content: '';
+    background: white;
+    position: absolute;
+    right: -20px;
+    bottom: -1px;
+    height: 41px;
+    width: 20px;
+    display: none;
+  }
+
+
+  span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    text-align: center;
+    line-height: 1;
+    opacity: 0;
+    clip: rect(0px, 0px, 1000px, 0px);
+    @include transition(all, 1s);
+  }
+
+  span.active {
+    @include transition(all, 4s);
+    opacity: 1;
+    clip: rect(0, 1000px,1000px, 0px);
+  }
 }
