--- a/app/sass/_head.scss
+++ b/app/sass/_head.scss
@@ -1310,42 +1310,29 @@ $base: 16;
   transition: $property $duration ease-in-out;
 }
 
+.change-block{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
 
 h1.intro {
+
   color: #fff;
   font-family: Gilroy;
-  font-size: 40px;
+  font-size: 38px;
   font-weight: 700;
   text-align: center;
   text-transform: initial;
-
-
 
 }
 .change-text {
   color: #fff;
   font-family: Gilroy;
-  font-size: 40px;
+  font-size: 38px;
   font-weight: 700;
-  text-align: center;
-  text-transform: initial;
-  margin: auto;
   position: relative;
-text-align: center;
-  width: 100%;
-
-
-  &:before {
-    content: '';
-    background: white;
-    position: absolute;
-    right: -20px;
-    bottom: -1px;
-    height: 41px;
-    width: 20px;
-    display: none;
-  }
-
+  margin-left: 8px;
 
   span {
     position: absolute;
@@ -1353,7 +1340,6 @@ text-align: center;
     left: 0;
     right: 0;
     margin: auto;
-    text-align: center;
     line-height: 1;
     opacity: 0;
     clip: rect(0px, 0px, 1000px, 0px);
@@ -1364,5 +1350,26 @@ text-align: center;
     @include transition(all, 4s);
     opacity: 1;
     clip: rect(0, 1000px,1000px, 0px);
+  }
+}
+@media (max-width: 1200px) {
+  .change-block{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .change-text span{
+    display: flex;
+    justify-content: center;
+  }
+}@media (max-width: 480px) {
+  h1.intro{
+    font-size: 30px;
+  }
+  .change-text span{
+    font-size: 30px;
+  }
+  .blue{
+    padding-bottom: 0;
   }
 }
